start add location rental feature with pricing and time management